--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         </section>
 
         <!--"reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.7940641613154!2d-111.88518274831011!3d40.76655394211034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f50d032e5a5f%3A0xe477cdb8a7247609!2s120%20S%20300%20E%2C%20Salt%20Lake%20City%2C%20UT%2084111!5e0!3m2!1sen!2sus!4v1631552218780!5m2!1sen!2sus" 
                 width="400" 
