--- a/index.html
+++ b/index.html
@@ -78,16 +78,21 @@
 
         <!--"what we do" section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+            <div class="flex-row">
             <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
+            </div>
         </section>
 
         <!--"what you do" section-->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
-
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
             <div>
                 <img src="./assets/images/step-1.svg" alt="">
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -115,9 +120,11 @@
 
         <!--"meet the trainers" section-->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">
-                Meet The Trainers
-            </h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    Meet The Trainers
+                </h2>
+            </div>
         <!--first trainer bio-->
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron." />
@@ -156,7 +163,9 @@
 
         <!--"reach out" section-->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.7940641613154!2d-111.88518274831011!3d40.76655394211034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f50d032e5a5f%3A0xe477cdb8a7247609!2s120%20S%20300%20E%2C%20Salt%20Lake%20City%2C%20UT%2084111!5e0!3m2!1sen!2sus!4v1631552218780!5m2!1sen!2sus" 
                 width="400" 
