--- a/index.html
+++ b/index.html
@@ -148,18 +148,19 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
             <div class="flex-row">
                 <h2 class="section-title primary-border">
                     Meet The Trainers
                 </h2>
             </div>
+    <div class="trainers">
         <!--first trainer bio-->
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron." />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed / Strength</h4>
+            <div class="trainer-bio">
+                <h3 class="trainer-name">Arron Stephens</h3>
+                <h4 class="trainer-role">Speed / Strength</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero magni iste, quod, nisi sint accusantium itaque consequatur voluptate facere cum reiciendis, omnis quidem vitae. Laboriosam enim eum commodi architecto.
                 </p>
@@ -168,25 +169,28 @@
 
         <!--second trainer bio-->
         <article class="trainer">
-            <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit tenetur dolore dolores repudiandae eum quod commodi. Sit necessitatibus, fugit sint nam praesentium accusantium fuga optio deleniti illum debitis similique illo!                   
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            <div class="trainer-bio">
+                <h3 class="trainer-name">Joanna Gill</h3>
+                <h4 class="trainer-role">Endurance</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit tenetur dolore dolores repudiandae eum quod commodi. Sit necessitatibus, fugit sint nam praesentium accusantium fuga optio deleniti illum debitis similique illo!                   
                 </p>
             </div>
-            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
         </article>
 
         <!--third trainer bio-->
         <article class="trainer">
             <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-            <div class="trainer-bio text-left">
-                <h3>Harry "the Headband" Smith</h3>
-                <h4>Strength</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore adipisci aut recusandae officiis incidunt! Non possimus, corporis, reiciendis dolor itaque et aliquam, deserunt aliquid pariatur doloremque repellat cumque. Qui, eos.
+            <div class="trainer-bio">
+                <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                <h4 class="trainer-role">Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore adipisci aut recusandae officiis incidunt! Non possimus, corporis, reiciendis dolor itaque et aliquam, deserunt aliquid pariatur doloremque repellat cumque. Qui, eos.
                 </p>
             </div>
         </article>
+    </div>
 
         </section>
 
